@@ -4,6 +4,7 @@ Version 1.18  2009-05-24
  * correct get local ip addresses
  * common files do not use global vars like g_network_timeout and g_base_path
  * download file support offset and download bytes
+ * hash function change type from unsigned int to signed int
 
 Version 1.17  2009-03-19
   * add test programs at sub directory test/
